use more realistic document

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/chance": "^1.1.7",
     "@types/node": "^24.10.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@mongodb-js/zstd": "^7.0.0",
+    "chance": "^1.1.13",
     "mongodb": "^7.0.0",
     "snappy": "^7.3.3"
   }
